--- a/src/app/main/apps/file-manager/Confirm-alert.css
+++ b/src/app/main/apps/file-manager/Confirm-alert.css
@@ -33,7 +33,8 @@ body.react-confirm-alert-body-element {
 
 .react-confirm-alert-body {
     font-family: Arial, Helvetica, sans-serif;
-    width: 400px;
+    width: auto;
+    max-width: 400px;
     padding: 30px;
     text-align: left;
     background: #fff;
