--- a/src/app/main/apps/file-manager/jsoneditor-react/es/jsoneditor.css
+++ b/src/app/main/apps/file-manager/jsoneditor-react/es/jsoneditor.css
@@ -609,6 +609,10 @@ div.jsoneditor-value p {
     margin: 0;
 }
 
+div.jsoneditor-field {
+    word-break: break-word;
+}
+
 div.jsoneditor-value {
     word-break: break-word;
 }
@@ -710,6 +714,7 @@ div.jsoneditor-default {
 div.jsoneditor-tree {
     width: 100%;
     height: 100%;
+    max-height: 320px;
     position: relative;
     overflow: auto;
     width: max-content;
@@ -904,7 +909,7 @@ div.jsoneditor-value.jsoneditor-highlight-active:hover {
 
 div.jsoneditor-value.jsoneditor-object,
 div.jsoneditor-value.jsoneditor-array {
-    min-width: 16px;
+    min-width: 30px;
 }
 
 div.jsoneditor-tree button.jsoneditor-contextmenu-button:hover,
@@ -1275,6 +1280,8 @@ pre.jsoneditor-preview,
 
 .jsoneditor-mode-form,
 .jsoneditor-mode-tree {
+    /* max-height: 407px;
+    overflow-y: auto; */
     min-width: 282px;
     width: fit-content;
     margin-right: 15px;
@@ -1353,8 +1360,9 @@ pre.jsoneditor-preview,
 }
 
 .jsoneditor-navigation-bar {
-    width: 100%;
-    height: 26px;
+    max-width: 350px;
+    margin-top: 23px !important;
+    height: 100%;
     line-height: 26px;
     padding: 0;
     margin: 0;
@@ -1430,10 +1438,12 @@ pre.jsoneditor-preview,
 
 .jsoneditor-results {
     font-family: arial, sans-serif;
-    color: #ffffff;
-    padding-right: 5px;
-    line-height: 26px;
-    display: none;
+    color: black;
+    text-align: right;
+    padding-right: 15px;
+    line-height: 30px;
+    padding-top: 29px;
+    /* display: none; */
 }
 
 .jsoneditor-frame {
@@ -1500,7 +1510,8 @@ div.jsoneditor-statusbar>.jsoneditor-size-info {
 .jsoneditor-treepath {
     padding: 0 5px;
     overflow: hidden;
-    white-space: nowrap;
+    /* white-space: nowrap; */
+    word-break: break-word;
     outline: none;
 }
 
