Added upload functionality in FM popup

--- a/src/app/main/apps/job-definition/Job-Definition/JobDefinitionForm.css
+++ b/src/app/main/apps/job-definition/Job-Definition/JobDefinitionForm.css
@@ -17,3 +17,19 @@ input[type=submit]:hover {
     box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
     background-color: #d5d5d5;
 }
+
+.formText {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    cursor: pointer;
+    border: 1px solid black;
+    margin-left: 3px;
+}
+
+.formText:hover {
+    box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+    background-color: #d5d5d5;
+}
+
+.headerDisplay {
+    display: none;
+}
