--- a/src/app/main/apps/job-definition/Job-Definition/file-manager-dialog/FileManagerDialog.css
+++ b/src/app/main/apps/job-definition/Job-Definition/file-manager-dialog/FileManagerDialog.css
@@ -1,8 +1,33 @@
 .buttonDisabled {
     pointer-events: none;
-    opacity: 0.2;
+    color: rgba(255, 255, 255, 0.3) !important;
+    box-shadow: none;
+    background-color: rgba(255, 255, 255, 0.12);
 }
 
-.dialogButton {
-    background-color: lightgray !important;
+
+/* .dialogButton {
+    font-size: 1.4rem;
+    color: white;
+}
+
+.dialogButton:hover {
+    text-decoration: none;
+    background-color: rgba(255, 255, 255, 0.1);
+} */
+
+::-webkit-scrollbar {
+    width: 12px;
+    height: 12px;
+    background-color: lightgray;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: darkgray;
+}
+
+::-webkit-scrollbar:hover {
+    width: 12px;
+    height: 12px;
+    background-color: lightgray;
 }
