fixed the vertial scroll on job defination and dynamic form

--- a/src/app/main/apps/job-definition/Job-Definition/JobDefinitionForm.css
+++ b/src/app/main/apps/job-definition/Job-Definition/JobDefinitionForm.css
@@ -42,3 +42,8 @@ input[type=submit]:hover {
     flex-wrap: wrap;
     flex-direction: row;
 }
+
+.MuiGrid-spacing-xs-1{
+    width: auto !important;
+    margin: auto !important;
+}
