--- a/src/app/main/apps/my-jobs/FileList.css
+++ b/src/app/main/apps/my-jobs/FileList.css
@@ -36,3 +36,8 @@ display: none;
   /* .sort-arrow1:hover{
     opacity: 1;
   } */
+
+  .MuiGrid-spacing-xs-1{
+    width: auto !important;
+    margin: auto !important;
+  }
