Upload for mobile, select file issue, added create folder in folder selection

--- a/src/app/main/apps/file-manager/FileUpload/FileUpload.css
+++ b/src/app/main/apps/file-manager/FileUpload/FileUpload.css
@@ -10,7 +10,8 @@
     display: flex;
     flex-direction: column;
     padding: 20px;
-    margin:0px,2px
+    margin:0px,2px;
+    width: fit-content;
   }
   
   .file-upload-container.drag {
