--- a/src/app/main/apps/job-definition/Job-Definition/file-manager-dialog/FileManagerDialog.css
+++ b/src/app/main/apps/job-definition/Job-Definition/file-manager-dialog/FileManagerDialog.css
@@ -5,6 +5,10 @@
     background-color: rgba(255, 255, 255, 0.12);
 }
 
+.createFolder {
+    text-align: end;
+}
+
 .tableStyle {
     overflow: auto;
     max-height: 320px;
