--- a/src/app/main/apps/job-definition/Job-Definition/static-forms/SelectFile.css
+++ b/src/app/main/apps/job-definition/Job-Definition/static-forms/SelectFile.css
@@ -39,9 +39,10 @@ input[type=submit]:hover {
 }
 
 .folderPath {
-    word-break: break-word;
+    line-break: anywhere;
     white-space: pre-wrap;
 }
+
 
 .infoIcon {
     margin-top: 38px;
@@ -50,7 +51,8 @@ input[type=submit]:hover {
 .toolTip {
     width:280px;
     white-space:pre-wrap;
-    word-break: break-all;
+    word-wrap:break-word;
+    word-break: keep-all;
 }
 
 
