Safari line break issue fixed

--- a/src/app/main/apps/job-definition/Job-Definition/Input.css
+++ b/src/app/main/apps/job-definition/Job-Definition/Input.css
@@ -39,7 +39,8 @@ input[type=submit]:hover {
 }
 
 .folderPath { 
-    line-break: anywhere;
+    /* line-break: anywhere; */
+    word-break: break-all;
     white-space: pre-wrap;
 }
 
