Bug fixes ITR 30

--- a/src/app/main/apps/job-definition/Job-Definition/static-forms/SelectFile.css
+++ b/src/app/main/apps/job-definition/Job-Definition/static-forms/SelectFile.css
@@ -30,6 +30,10 @@ input[type=submit]:hover {
     background-color: #d5d5d5;
 }
 
+.ModelMenu {
+    white-space: pre-wrap;
+}
+
 .headerDisplay {
     display: none;
 }
