--- a/src/app/main/apps/job-definition/Job-Definition/JobDefinitionFileList.css
+++ b/src/app/main/apps/job-definition/Job-Definition/JobDefinitionFileList.css
@@ -26,6 +26,7 @@ display: none;
     margin-left: 12px;
     margin-top: 0px;
      margin-bottom: 5px;
+     white-space: nowrap;
   }
   .sort-arrow{
     opacity: 0;
