Bug fixes marked as fixed after ITR 48

--- a/src/app/main/apps/job-definition/Job-Definition/file-manager-dialog/FileManagerDialog.css
+++ b/src/app/main/apps/job-definition/Job-Definition/file-manager-dialog/FileManagerDialog.css
@@ -62,3 +62,10 @@
         background-color: lightgray;
     }
   }
+
+  @media only screen and (max-width: 500px) {
+     .hideHeader {
+         display: none;
+     }
+
+  }
