--- a/src/app/main/apps/job-definition/Job-Definition/Input.css
+++ b/src/app/main/apps/job-definition/Job-Definition/Input.css
@@ -40,7 +40,7 @@ input[type=submit]:hover {
 
 .folderPath { 
     /* line-break: anywhere; */
-    word-break: break-all;
+    word-break: keep-all;
     white-space: pre-wrap;
 }
 
