--- a/src/app/main/apps/job-definition/Job-Definition/static-forms/SelectFile.css
+++ b/src/app/main/apps/job-definition/Job-Definition/static-forms/SelectFile.css
@@ -55,7 +55,7 @@ input[type=submit]:hover {
 
 .folderPath {
     /* line-break: anywhere; */
-    word-break: break-all;
+    word-break: keep-all;
     white-space: pre-wrap;
 }
 
