--- a/src/app/main/apps/my-jobs/MyJobsApp.css
+++ b/src/app/main/apps/my-jobs/MyJobsApp.css
@@ -13,7 +13,7 @@
     height: auto;
 }
 
-.overflowContent {
+.overflowContentJob {
   /* overflow-x: auto; */
   overflow: initial;
 }
@@ -38,4 +38,10 @@
 .MuiGrid-spacing-xs-1{
   width: 100% !important;
   margin: auto !important;
+}
+
+@media only screen and (max-width: 1279px) {
+  .sidebarStyle {
+    width: 320px;
+  }
 }
