--- a/src/app/main/apps/file-manager/FileManager.css
+++ b/src/app/main/apps/file-manager/FileManager.css
@@ -5,6 +5,7 @@
 .sidebarStyle {
   min-width: 320px;
   max-width: 515px;
+  width: auto;
 }
 
 .subcategory-count-badge {
@@ -56,4 +57,10 @@
 
 .wordBreak {
   word-break: keep-all;
+}
+
+@media only screen and (max-width: 1279px) {
+  .sidebarStyle {
+    width: 320px;
+  }
 }
