--- a/src/app/main/apps/my-jobs/MyJobsApp.css
+++ b/src/app/main/apps/my-jobs/MyJobsApp.css
@@ -14,8 +14,7 @@
 }
 
 .overflowContentJob {
-  /* overflow-x: auto; */
-  overflow: initial;
+  overflow: auto;
 }
 
 .sidebarStyle {
@@ -44,4 +43,8 @@
   .sidebarStyle {
     width: 320px;
   }
+
+  /* .overflowContentJob {
+    overflow: auto;
+  } */
 }
