--- a/src/app/main/apps/my-jobs/MyJobsApp.css
+++ b/src/app/main/apps/my-jobs/MyJobsApp.css
@@ -14,7 +14,11 @@
 }
 
 .overflowContentJob {
-  overflow: auto;
+  overflow: visible;
+}
+
+.webkitSticky {
+  position: -webkit-sticky !important;
 }
 
 .sidebarStyle {
@@ -44,7 +48,7 @@
     width: 320px;
   }
 
-  /* .overflowContentJob {
+  .overflowContentJob {
     overflow: auto;
-  } */
+  }
 }
