folderPath css issue fixed

--- a/src/app/main/apps/job-definition/Job-Definition/static-forms/SelectFile.css
+++ b/src/app/main/apps/job-definition/Job-Definition/static-forms/SelectFile.css
@@ -54,9 +54,12 @@ input[type=submit]:hover {
 }
 
 .folderPath {
-    /* line-break: anywhere; */
     word-break: keep-all;
     white-space: pre-wrap;
+}
+
+.pathBreak {
+        line-break: anywhere;
 }
 
 .infoIcon {
