Bug fixes  ITR 10 (58)

--- a/src/app/main/apps/file-manager/FileManager.css
+++ b/src/app/main/apps/file-manager/FileManager.css
@@ -21,6 +21,12 @@
   height: auto;
 }
 
+@media screen and (max-width:600px) {
+  .mob-header{
+    flex-direction: column-reverse;
+  }
+}
+
 /* .contentStyle {
     height: 50%;
     overflow-y: auto;
@@ -38,6 +44,10 @@
 .overflowContentFiles {
   /* overflow-x: auto; */
   overflow: visible;
+}
+
+.header1{
+  display: table;
 }
 
 .sidebarHeader1 {
