Simulation Form and Pagination bug fixes.

--- a/src/app/main/apps/job-definition/Job-Definition/JobDefinitionFileList.css
+++ b/src/app/main/apps/job-definition/Job-Definition/JobDefinitionFileList.css
@@ -86,8 +86,7 @@ display: none;
   }
   
   input#GoToPagination {
-    padding-bottom: 8px;
-    padding-top: 8px;
+    padding: 8px;
   }
   
   .goToPaginationButton {
