--- a/src/app/main/file-manager/FileManager.css
+++ b/src/app/main/file-manager/FileManager.css
@@ -132,3 +132,7 @@ hr {
 .MuiPaper-root .Mui-focused {
   color: black !important;
 }
+
+.MuiFormControl-root .Mui-focused {
+  color: black !important;
+}
