CSONNet_Initial Condition (Seeding) update with static data implementation.

--- a/src/app/main/apps/job-definition/Job-Definition/static-forms/SelectFile.css
+++ b/src/app/main/apps/job-definition/Job-Definition/static-forms/SelectFile.css
@@ -53,6 +53,16 @@ input[type=submit]:hover {
     margin-top: 12px;
 }
 
+.inputStyle2 {
+    width: 100%;
+    margin-top: 12px;
+}
+
+.inputStyle3 {
+    width: 70%;
+    margin-top: 12px;
+}
+
 .folderPath {
     word-break: keep-all;
     white-space: pre-wrap;
