@mui dep removed, Responsive File Manager, Bug fixes for both

--- a/src/app/fuse-layouts/layout2/components/NavbarLayout2.css
+++ b/src/app/fuse-layouts/layout2/components/NavbarLayout2.css
@@ -1,7 +1,7 @@
-#outlined-search-label,.Mui-auto-focused {
+/* #outlined-search-label,.Mui-auto-focused {
     color: white;   
     border-bottom: none;
-}
+} */
 
 #outlined-search,.MuiInput-underline,.Mui-auto-focused {
     border-bottom: 1px solid white;
